--- a/Eveneum.ApplicationInsights/Eveneum.ApplicationInsights.csproj
+++ b/Eveneum.ApplicationInsights/Eveneum.ApplicationInsights.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<NuspecProperties>version=$(Version)</NuspecProperties>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.15.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.20.0" />
   </ItemGroup>
 
   <ItemGroup>
